--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,17 @@ body {
     font-family: Consolas;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 .cmds {
     padding: 0;
     margin: 0;
+    width: 50%;
 }
 
 .cmds li {
     list-style-type: none;
-    white-space: pre;
 }
 
 .active {
@@ -48,12 +49,14 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0 10px;
+    box-sizing: border-box
 }
 
-.cmds, .helps{
-    padding: 0;
-    margin: 0;
-    width: 49%;
+.console li {
+    white-space: pre;
 }
 
 @-webkit-keyframes blink {
